fix: fixed horizontal scroll.

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -7,7 +7,7 @@
 
   color: #242424;
   background: var(--color-white);
-
+  box-sizing: border-box;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -18,7 +18,6 @@
 body {
   display: flex;
   flex-direction: column;
-  min-width: 100vw;
   min-height: 100vh;
   margin: 0;
 }
