--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -244,7 +244,7 @@
   .footer-copyright {
     display: flex;
     flex-direction: row;
-    gap: 190px;
+    gap: 110px;
   }
 
   .footer-copyright-links {
